Add power stepping to stepping controls

--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -516,7 +516,7 @@ You can use it to step over each expression, visualize values, locals and more.
 
 image::user_guide_images/controls.png[]
 
-The numbers at the end show `current_step_index / total_steps`. This means that a total of `total_steps` has been recorded
+The numbers at the center show `current_step_index / total_steps`. This means that a total of `total_steps` has been recorded
 for this thread so far.
 
 Write any number (less than total_steps) on the text box to jump into that position in time. When jumping around you can write down any interesting
@@ -524,9 +524,11 @@ positions you find and then use this text box to jump back to it if you need.
 
 The code tool allows you to step and "travel thought time" in two ways:
 
-- You can use the controls at the top or [Ctrl | Alt]+MouseWheel on the forms to move one step at a time.
+- You can use the controls at the top to step over your code in different ways.
 
 - Or you can click on the highlighted forms to position the debugger at that point in time.
+
+Only the forms that were executed at least once for the flow and thread will be highlighted.
 
 From left to right this are the controls you have available :
 
@@ -538,10 +540,28 @@ From left to right this are the controls you have available :
 - Step forward, will step forward in time going into sub functions.
 - Step over forward, will make one step forwards always staying on the same frame.
 - Jump to the last step of the recording.
-- Follow value backwards. Will step to the previous expression (if any) that evaluates to the current value.
-- Follow value forward. Will step to the next expression (if any) that evaluates to the current value.
 
-Only the forms that were executed at least once for the flow and thread will be highlighted.
+==== Power stepping
+
+The controls at the right are power stepping controls. They provide more powerfull ways of stepping through the code.
+
+There are currently 3 power stepping tools :
+
+- identity, will step to the next value which identity is the same as the current value
+- equality, will step to the next value which is equals (clojure equality) to the current value
+- custom, allows you to provide a predicate, which will be used to find the next step.
+  If you define it like `(fn [v] (map? v))` will make the power stepper step over all map values.
+
+image::user_guide_images/controls_power_custom.png[]
+
+Clicking on the back and forward button will use the selected power stepping tool.
+
+[NOTE]
+.Custom stepping
+====
+Custom power stepping is only supported in Clojure now.
+====
+
 
 ==== Searching
 
